# vvv18-demo-team-orange

./: .gitignore  CMakeLists.txt  README.md
app/: vvv18-orange.xml  vvv18-orange_icub.xml
src/: CMakeLists.txt  dynamics.cpp  dynamics.h  helpers.cpp  helpers.h  kinematics.cpp  kinematics.h  main.cpp  rf.cpp  rf.h  vision.cpp  vision.h
src/dynamics/: CMakeLists.txt  Dynamics.cpp  EEForcesReader.cpp
src/dynamics/app/scripts/: Dynamics.xml
src/kinematics/: CMakeLists.txt  igaze.cpp  ikine.cpp  main-high5.cpp
src/kinematics/app/: Kinematics.xml  igaze-app-icubSim.xml  igaze-system.xml
src/learning/: CMakeLists.txt
src/learning/app/: CMakeLists.txt
src/learning/app/conf/: labels.txt
src/learning/objectRecognizer/: objectRecognizer.xml
src/learning/objectRecognizer/app/: CMakeLists.txt
src/learning/objectRecognizer/app/conf/: config.ini  deploy_MemoryData_caffenet.prototxt  deploy_MemoryData_caffenet.prototxt.template  objectRecognizer.ini.template
src/learning/objectRecognizer/app/scripts/: objectRecognizer.xml
src/learning/objectRecognizer/include/: CaffeWrapper.hpp  definitions.h
src/learning/objectRecognizer/src/: classifier_rpc_2.cpp  main.cpp  main_rpc.cpp  main_rpc.cpp.autosave
src/manager/: CMakeLists.txt  manager.cpp
src/speech/: speech.lua
src/vision/: CMakeLists.txt  vision.cpp
src/vision/app/: assignment_make-it-roll-app-icub.xml
src/vision/app/scripts/: vvv18_demo_team_orange_vision.xml
